# REX

./: .goStraight.py.swp  EmergencyStop.py  MainObstacle.py  README.md  SafeGoDist.py  circle.py  figure-eight.py  goDist.py  goSquare.py  goStraight.py  goToBox.py  inftyp.py  obstacleAvoid.py  printMap.py  sensorTest.py  square.py  testturn.py  turnToBox.py
ARLO/: robot.py  serialRobotArlo.ino  test_arduino_encoders.py
Ex3/: findTheLandMark.py
Ex4/: CMakeLists.txt  calibration_params_MacBookPro.yml  findlocation.py  localize.py  mainWgrid.py  mainẂgrid.py  move.py  selflocalize.py
Ex4-self-localization/: README.txt  calibration_params_picamera.yml  camera.py  findlocation.py  localize.py  localizeV2.py  main.py  move.py  particle.py  selflocalize.py
Ex4-self-localization/src/handout/python/: findlocation.py  particle.py  selflocalize.py
Ex5_Occupancy/: Occupancy.py
Exam/: Planning.txt  camera.py  findlocation.py  gotobox.py  localize.py  main.py  mainV2.py  move.py  obsacleAvoid.py  obstacleAvoid.py  particle.py  planning_test.py  routePlan.py  targetStatus.py  test.py  verification.py
Open_CV_Examples/cameracalibration/: CMakeLists.txt  camera_calibrator.cc  checkerboard_generator.cc
Open_CV_Examples/misc/: PracticalSocket.cc  index.h  pwc.cc  pwc.h  random_numbers.cc  random_numbers.h  tsht.cc  tsht.h  von_mises.h
Open_CV_Examples/opencv2-python/Eksempel1/: eksempel1.py
Open_CV_Examples/opencv2-python/Eksempel2/: eksempel2.py
Open_CV_Examples/opencv2-python/Eksempel3/: eksempel3.py
Open_CV_Examples/opencv2/Eksempel2/: eksempel2.cc
assignment1/: task3.py
